; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_asn1.c_kull_m_asn1_freeEnc.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_asn1.c_kull_m_asn1_freeEnc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASN1enc = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kull_m_asn1_freeEnc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @ASN1enc, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i64, i64* @ASN1enc, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @ASN1_FreeEncoded(i64 %9, i8* %10)
  br label %12

12:                                               ; preds = %8, %5, %1
  ret void
}

declare dso_local i32 @ASN1_FreeEncoded(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
